--- a/CustomerManagerStandard/CustomerManager/packages.config
+++ b/CustomerManagerStandard/CustomerManager/packages.config
@@ -18,6 +18,9 @@
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="NLog" version="3.2.0.0" targetFramework="net45" />
+  <package id="NLog.Config" version="3.2.0.0" targetFramework="net45" />
+  <package id="NLog.Schema" version="3.2.0.0" targetFramework="net45" />
   <package id="Q" version="1.1.2" targetFramework="net45" />
   <package id="RequireJS" version="2.1.17" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net45" />
