--- a/CustomerManagerStandard/CustomerManager/packages.config
+++ b/CustomerManagerStandard/CustomerManager/packages.config
@@ -6,15 +6,22 @@
   <package id="Breeze.Server.WebApi2" version="1.5.3" targetFramework="net45" />
   <package id="Breeze.WebApi2.EF6" version="1.5.3" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights" version="0.14.0-build20632" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="0.14.0-build08008" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.PerformanceCollector" version="0.14.0-build20632" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.RuntimeTelemetry" version="0.14.0-build20632" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.Web" version="0.14.0-build20632" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.5.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net45" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.16-beta" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
