--- a/CustomerManagerStandard/CustomerManager.E2ETests/CustomerManager.E2ETests.csproj
+++ b/CustomerManagerStandard/CustomerManager.E2ETests/CustomerManager.E2ETests.csproj
@@ -55,6 +55,7 @@
       <HintPath>..\packages\Protractor.0.3.0\lib\net40\Protractor.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="WebDriver">
@@ -63,10 +64,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IndexTests.cs" />
+    <Compile Include="Parameters.cs" />
     <Compile Include="Support\NgMockE2EModule.cs" />
     <Compile Include="Views\CustomersViewTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -74,7 +77,7 @@
       <Link>phantomjs.exe</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\packages\WebDriver.ChromeDriver.win32.2.4.0.0\content\chromedriver.exe">
+    <Content Include="..\packages\Selenium.WebDriver.ChromeDriver.2.15.0.0\driver\chromedriver.exe">
       <Link>chromedriver.exe</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
