--- a/CustomerManagerStandard/CustomerManager.E2ETests/packages.config
+++ b/CustomerManagerStandard/CustomerManager.E2ETests/packages.config
@@ -5,5 +5,5 @@
   <package id="PhantomJS" version="1.9.2" targetFramework="net45" />
   <package id="Protractor" version="0.3.0" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="2.37.0" targetFramework="net45" />
-  <package id="WebDriver.ChromeDriver.win32" version="2.4.0.0" targetFramework="net45" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.15.0.0" targetFramework="net45" />
 </packages>
