--- a/CustomerManagerStandard/CustomerManager/Web.config
+++ b/CustomerManagerStandard/CustomerManager/Web.config
@@ -81,6 +81,11 @@
     </assemblyBinding>
   </runtime>
   <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Arr-Disable-Session-Affinity" value="true"/>
+      </customHeaders>
+    </httpProtocol>
     <handlers>
       
       
