--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /CustomerManagerStandard/Automation/account.txt
 /CustomerManagerStandard/*.user
+/CustomerManagerStandard/CustomManager.DatabaseLoadApp/publish
