Added giveaway for all attendees. It mostly useless advertisement, but you can check and find what kind of product you can create :)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /CustomerManagerStandard/Automation/account.txt
 /CustomerManagerStandard/*.user
 /CustomerManagerStandard/CustomerManager.Database/*.dbmdl
+/CustomerManagerStandard/CustomerManager.Database/*.user
